--- a/MyTheatre.Api/MyTheatre.Api.csproj
+++ b/MyTheatre.Api/MyTheatre.Api.csproj
@@ -12,6 +12,10 @@
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
+     <PackageReference Include="Swashbuckle" Version="6.0.0-beta902" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MyTheatre.Domain\MyTheatre.Domain.csproj" />
   </ItemGroup>
 
