change param from values to video of post method

--- a/MyTheatre.Api/.vscode/launch.json
+++ b/MyTheatre.Api/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}\\bin\\Debug\\netcoreapp1.1\\MyTheatreApi.dll",
+            "program": "${workspaceRoot}\\bin\\Debug\\netcoreapp1.1\\MyTheatre.Api.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
             "stopAtEntry": false,
