--- a/MyTheatre.Api/.vscode/tasks.json
+++ b/MyTheatre.Api/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "taskName": "build",
             "args": [
-                "${workspaceRoot}\\MyTheatreApi.csproj"
+                "${workspaceRoot}\\MyTheatre.Api.csproj"
             ],
             "isBuildCommand": true,
             "problemMatcher": "$msCompile"
