added sqlite database

--- a/MyTheatre.Api/MyTheatre.Api.csproj
+++ b/MyTheatre.Api/MyTheatre.Api.csproj
@@ -16,7 +16,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="1.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.1" PrivateAssets="All" />
+  </ItemGroup>
+
+ <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MyTheatre.Domain\MyTheatre.Domain.csproj" />
   </ItemGroup>
+
 
 </Project>
