added MyTheatre Web UI

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ MyTheatre.Api/out/
 MyTheatre.Domain/bin/
 MyTheatre.Domain/obj/
 MyTheatre.Domain/out/
+MyTheatre.Web/bin/
+MyTheatre.Web/obj/
+MyTheatre.Web/out/
