--- a/MyTheatre.Web/MyTheatre.Web.csproj
+++ b/MyTheatre.Web/MyTheatre.Web.csproj
@@ -4,7 +4,6 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
@@ -13,5 +12,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+       <ProjectReference Include="..\MyTheatre.Domain\MyTheatre.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
