--- a/MyTheatre.Web/MyTheatre.Web.csproj
+++ b/MyTheatre.Web/MyTheatre.Web.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.0" />
+    <PackageReference Include="Newtonsoft.json" Version="9.0.1"/>
   </ItemGroup>
 
   <ItemGroup>
