--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "taskName": "build",
             "args": [
-                "${workspaceRoot}\\MyTheatre.Api\\MyTheatre.Api.csproj"
+                "${workspaceRoot}\\MyTheatre.Web\\MyTheatre.Web.csproj"
             ],
             "isBuildCommand": true,
             "problemMatcher": "$msCompile"
