--- a/MyTheatre.Api/Dockerfile
+++ b/MyTheatre.Api/Dockerfile
@@ -3,6 +3,6 @@ WORKDIR /app
 
 COPY . .
 RUN dotnet restore
-RUN dotnet publish -o ./out -c Releash
+RUN dotnet publish -o ./out -c Release
 ENTRYPOINT dotnet ./out/MyTheatre.Api.dll
 
